--- a/templates/admin/product/list.html.twig
+++ b/templates/admin/product/list.html.twig
@@ -1,1 +1,47 @@
+{% extends 'admin/admin_content_base.html.twig' %}
 
+{% block title %}Products{% endblock %}
+
+{% block nav_body %}
+
+{% endblock %}
+
+{% block content_body %}
+    <div class="row">
+        <div class="col-sm-12">
+            <h1>Manage Comments ({{ pagination.getTotalItemCount() }})</h1>
+
+            <form>
+                <div class="input-group mb-3">
+                    <input type="text"
+                           name="search"
+                           value="{{ app.request.query.get('search') }}"
+                           class="form-control"
+                           placeholder="Search..."
+                    >
+                    <div class="input-group-append">
+                        <button type="submit"
+                                class="btn btn-outline-secondary">
+                            <span class="fa fa-search"></span>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <table>
+                <thead>
+                <tr>
+                    <th>Article</th>
+                    <th>Author</th>
+                    <th>Comment</th>
+                    <th>Created</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+            {{ knp_pagination_render(pagination) }}
+        </div>
+    </div>
+{% endblock %}
