Attribute Controller and List Template added

--- a/templates/admin/admin_base.html.twig
+++ b/templates/admin/admin_base.html.twig
@@ -42,13 +42,13 @@
                 <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Catalog</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li>
-                        <a href="#">Products</a>
+                        <a href="{{ path('admin_product_list') }}">Products</a>
                     </li>
                     <li>
                         <a href="#">Categories</a>
                     </li>
                     <li>
-                        <a href="#">Attributes</a>
+                        <a href="{{ path('admin_attribute_list') }}">Attributes</a>
                     </li>
                 </ul>
             </li>
