--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,7 +83,7 @@ ul ul a {
     width: 100%;
     margin-left: 250px;
     padding-bottom: 40px;
-    padding-top: 60px;
+    padding-top: 10px;
 }
 
 
@@ -95,14 +95,7 @@ ul ul a {
     transform: translateY(-50%);
 }
 
-/* FOOTER */
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #fff;
-  margin-top: 10px;
+#products-table th:not(.sorted) a {
+    color: #1e91cf;
+    text-decoration: none;
 }
