--- a/templates/admin/product/_form.html.twig
+++ b/templates/admin/product/_form.html.twig
@@ -3,19 +3,45 @@
     {{ form_row(productForm.name) }}
     {{ form_row(productForm.price) }}
 
-    <div id="product-attribute"
-        data-prototype="{{ form_widget(productForm.attributeValue.vars.prototype)|e }}"
-        data-widget-tags="{{ '<div></div>'|e }}"
-        data-widget-counter="{{ productForm.attributeValue|length }}">
-    </div>
 
-    <div class="form-group">
-        <button type="button"
-                class="add-attribute btn btn-success"
-                data-list-selector="#product-attribute">Add attribute</button>
-    </div>
+{#<div id="product-attribute"
+     data-prototype="{{ form_widget(productForm.attributeValue.vars.prototype)|e }}"
+     data-widget-tags="{{ '<div></div>'|e }}"
+     data-widget-counter="{{ productForm.attributeValue|length }}">
+</div>#}
 
-    <button type="submit" class="btn btn-primary">{{ button_text }}</button>
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th>Attribute</th>
+            <th>Attribute value</th>
+            <th width="60"></th>
+        </tr>
+    </thead>
+    <tbody id="product-attribute-list">
+    {% for attributeValue in productForm.attributeValue %}
+    <tr>
+        {% for child in attributeValue.children %}
+            <td> {{ form_widget(child) }}</td>
+        {% endfor %}
+        <td><button type="button" class="remove-attribute btn btn-danger" data-widget-id="#product_form_attribute_2"><i class="fa fa-trash"></i></button></td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
+<div class="form-group">
+    <button type="button"
+            class="add-attribute btn btn-success"
+            data-list-element="#product-attribute-list"
+            data-prototype='<tr>
+            {% for child in productForm.attributeValue.vars.prototype.children %}
+                <td scope="row">{{ form_widget(child)|e }}</td>
+            {% endfor %}
+            <td><button type="button" class="remove-attribute btn btn-danger" data-widget-id="#product_form_attribute___name__"><i class="fa fa-trash"></i></button></td>
+        </tr>'
+            data-widget-counter="{{ productForm.attributeValue|length }}">Add attribute</button>
+</div>
 
 {{ form_end(productForm) }}
 
