--- a/templates/admin/product/form.html.twig
+++ b/templates/admin/product/form.html.twig
@@ -3,13 +3,18 @@
 {% block title %}Products{% endblock %}
 
 {% block body_nav %}
-    <h1>Products</h1>
+    <div class="container-fluid">
+        <h1>{{ text_title }}</h1>
+        <div class="pull-right">
+            <button type="submit" form="product_form" class="btn btn-primary"><i class="fa fa-save"></i></button>
+            <a href="{{ path('admin_product_list') }}" class="btn btn-secondary"><i class="fa fa-reply"></i></a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content_body %}
     <div class="row">
         <div class="col-sm-12">
-            <h1>Update Article!</h1>
             {{ include('admin/product/_form.html.twig', {
                 button_text: 'Update!'
             }) }}
