--- a/templates/admin/attribute/list.html.twig
+++ b/templates/admin/attribute/list.html.twig
@@ -14,23 +14,6 @@
 {% block content_body %}
     <div class="row">
         <div class="col-sm-12">
-            <form>
-                <div class="input-group mb-3">
-                    <input type="text"
-                           name="search"
-                           value="{{ app.request.query.get('search') }}"
-                           class="form-control"
-                           placeholder="Search..."
-                    >
-                    <div class="input-group-append">
-                        <button type="submit"
-                                class="btn btn-outline-secondary">
-                            <span class="fa fa-search"></span>
-                        </button>
-                    </div>
-                </div>
-            </form>
-
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -40,7 +23,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                {% for attribute in pagination %}
+                {% for attribute in attributes %}
                     <tr>
                         <td>{{ attribute.id }}</td>
                         <td>{{ attribute.name }}</td>
@@ -59,7 +42,7 @@
                 </tbody>
             </table>
 
-            {{ knp_pagination_render(pagination) }}
+            {{ knp_pagination_render(attributes) }}
         </div>
     </div>
 {% endblock %}
